3 Nov 2004   path optimization: 
             1) cleanup of the output format (more informative)
             2) some cleanup of internal routines
             3) added a couple of input variables and changed the default value
                of ds from 1.5 to 1.0.
             BFGS optimization:
             1) implemented a mixed BFGS + Murtag-Sargent update of the inverse
                hessian which is generally faster than the pure BFGS
             2) trust_radius_max increased to 0.8 bohr
             3) some cleanup of internal routines
             (CS)
             Old parallel variables (such as me mypool) removed from 
             PH and PP (CS)
             vc-relax was not working: variables lmd and ldamped 
             not set (PC)

1 Nov 2004   more CP/FPMD merging, cleanup (CC)
             Calculation of LDA+U contribution to forces modified:
             should be faster (SdG)
             Example 22 uses the same pseudo generated in
             atomic/gen-pseudo (ADC)
             Makefile and ChangeLog cleanup (PG)
             Electron-phonon coefficient calculation should 
             work also after a restart - to be tested (PG)

30 Oct 2004 - pwcond can now deal with spinor wavefunctions and with
             fully relativistic PPs with spin-orbit. Initial 
             implementation (still quite experimental). (ADC)
             Added an example to calculate the complex band structure
             of Pt with spin-orbit. (ADC)
             Several improvements to the pwcond code. Now much faster. (ADC)

26 Oct 2004  Patches from Axel Kohlmayer:
             - iotk_scan in iotk_module had a mixed up 'intent' statement.
             - sun ultra fire 3 compiler warnings
             - cleanup in filename lenght (brought to 256)
             - cleanup in include files
             Added lapack_atlas for Mac/OS (Pascal Thibadeau)

25 Oct 2004  removed call to check()
             workarounds for g95 bug [Gerardo]